--- a/laravel/resources/sass/foundation/_base.scss
+++ b/laravel/resources/sass/foundation/_base.scss
@@ -119,3 +119,12 @@ textarea,
 select {
     max-width: 100%;
 }
+
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
