--- a/laravel/resources/sass/foundation/_base.scss
+++ b/laravel/resources/sass/foundation/_base.scss
@@ -12,6 +12,9 @@ html,
 body {
     margin: 0;
     padding: 0;
+    font-size: $font-size_default;
+    font-family: $font-family-base;
+    font-weight: $font-weight-base;
 }
 
 article,
@@ -95,6 +98,7 @@ td {
 a {
     color: inherit;
     outline: none;
+    text-decoration: none;
 }
 
 img {
